trunk/Archive2/67/1ee7d97863200e/output
main.cpp:143:7: error: unused variable 'totalDistance' [-Werror,-Wunused-variable]
float totalDistance = 0;
      ^
1 error generated.
